hphp/test/zend/good/Zend/tests/errmsg_036.php.expectf

Fatal error: A type specifier is expected here. in %s/errmsg_036.php on line 3
